# full-stack-fastapi-neo4j

./: .gitignore  Dockerfile  README.md  celeryworker.dockerfile  docker-compose.override.yml  docker-compose.yml  initial-data.sh  prestart.sh  pyproject.toml  worker-beat-start.sh  wrapper.sh
app/: backend_pre_start.py  celeryworker_pre_start.py  gunicorn_conf.py  initial_data.py  logging_config.py  main.py
app/api/: deps.py
app/api/api_v1/: api.py  misc.py
app/api/api_v1/endpoints/: items.py  movies.py  person.py  resume.py  utils.py
app/core/: celary_config.py  celery_app.py  config.py
app/core/task/: periodic_task.py
app/db/: init_db.py  node.py  session.py
app/schemas/: __init__.py  item.py  movies.py  node.py  person.py  resume.py
app/tests/: conftest.py
app/tests/api/api_v1/: test_celery.py  test_item.py
app/tests/utils/: utils.py
app/web/static/css/: styles.css
app/web/templates/: index.html
docker/: app.dockerfile  celeryworker.dockerfile  neo4j.dockerfile
scripts/: test.sh
