[tool.poetry]
name = "full-stack-fastapi-neo4j"
version = "0.1.0"
description = ""
authors = ["hai che <cheviethai123@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
neo4j = "^4.1.0"
fastapi = "^0.60.1"
uvicorn = "^0.11.8"
gunicorn = "^20.0.4"
celery = "^4.4.7"
aiofiles = "^0.5.0"
tenacity = "^6.2.0"
jinja2 = "^2.11.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
