[tool.poetry]
name = "full-stack-fastapi-neo4j"
version = "0.1.0"
description = ""
authors = ["hai che <cheviethai123@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "0.109.2"
gunicorn = "^22.0.0"
neo4j = "^4.1.0"
uvicorn = "^0.29.0"
celery = "^5.4.0"
aiofiles = "^0.5.0"
tenacity = "^6.2.0"
jinja2 = "^3.1.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
